# Newton-M2-Ros-Driver

./: .gitignore  README.md
serial/include/serial/: serial.h
starneto/: CMakeLists.txt  package.xml
starneto/config/: starneto_mems.yaml
starneto/include/: starneto_mems.hpp
starneto/launch/: starneto_mems.launch
starneto/src/: main.cpp  starneto_mems.cpp
starneto_ros_msgs/: CMakeLists.txt  package.xml
starneto_ros_msgs/msg/: Gpfpd.msg  Gtimu.msg  Pos320Nav.msg
